<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/function_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/list"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playing" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_description"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="16sp" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/albumCover1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:src="@drawable/album1" />

            <TextView
                android:id="@+id/artist1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/albumCover1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/artist1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/song1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/albumCover1"
                android:paddingBottom="16dp"
                android:text="@string/song1"
                android:textSize="16sp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/albumCover2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:src="@drawable/album2" />

            <TextView
                android:id="@+id/artist2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/albumCover2"
                android:fontFamily="sans-serif-medium"
                android:text="@string/artist2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/song2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/albumCover2"
                android:paddingBottom="16dp"
                android:text="@string/song2"
                android:textSize="16sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/albumCover3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:src="@drawable/album3" />

            <TextView
                android:id="@+id/artist3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/albumCover3"
                android:fontFamily="sans-serif-medium"
                android:text="@string/artist3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/song3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/albumCover3"
                android:paddingBottom="16dp"
                android:text="@string/song3"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
