<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/album1" />

    <TextView
        android:id="@+id/artistView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:shadowRadius="5.0"
        android:text="@string/artist1"
        android:textColor="@color/shine"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/songView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/artistView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:shadowRadius="5.0"
        android:text="@string/song1"
        android:textAlignment="center"
        android:textColor="@color/shine"
        android:textSize="45sp" />

    <ImageButton
        android:id="@+id/playBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:background="@null"
        android:src="@drawable/play" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/function_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/details"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playing" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_description"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>
