<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/details"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="40sp" />

            <Button
                android:id="@+id/gotolibrary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/library"
                android:textAllCaps="true" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_description"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/artistView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="16dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="5.0"
            android:textColor="@color/shine"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/songView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/artistView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="5.0"
            android:textAlignment="center"
            android:textColor="@color/shine"
            android:textSize="45sp" />


    </RelativeLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/previous" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/play" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/next" />

    </LinearLayout>

</LinearLayout>
